--- a/11.5.css
+++ b/11.5.css
@@ -2,10 +2,67 @@
     padding:0;
     margin:0;
     box-sizing: border-box;
+    color: white;
 }
 .container{
     display: flex;
     flex-direction: column;
-    padding: 0 5vh;
+    padding: 0 15vh;
     gap: 4vh;
+}
+.col2, .col3, .col4{
+    display: flex;
+    gap: 5vh;
+}
+.tab1{
+    background-color: #9f4a4b;
+    width: 65.7%;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.tab2{
+    background-color: #9f4a4b;
+    width: 31.3%;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.tab3, .tab4, .tab5, .tab6, .tab7, .tab8{
+    width: 33%;
+    background-color: #9f4a4b;
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width:1200) {
+    .container{
+        padding: 0 5vh;
+    }
+    .col2, .col3, .col4{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        gap: 5vh;
+    }
+    .tab1{
+        width: 100%;
+        height: 30vh;
+    }
+    .tab2{
+        width: 100%;
+        height: 10vh;
+    }
+    .tab3, .tab4, .tab5, .tab6, .tab7, .tab8{
+        width: 49%;
+    }
+}
+@media screen and (max-width:768) {
+    *{
+        width: 100%;
+    }
 }
